--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,10 @@ steps:
 - task: Npm@1
   inputs:
     command: 'install'
+- task: Npm@1
+  inputs:
+    command: 'custom'
+    customCommand: 'run build'
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: 'build'
